--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
 	"name": "roman-numeral-converter",
 	"version": "0.0.1",
 	"description": "A service to convert arabic numbers to roman numerals",
-	"scripts": {
-		"build": "tsc",
-		"dev": "nodemon",
-		"start": "node build/index.js"
-	},
 	"author": {
 		"name": "Vardaan Aashish",
 		"email": "oyevardaan@gmail.com"
 	},
 	"license": "ISC",
+	"scripts": {
+		"test": "jest",
+		"build": "tsc",
+		"dev": "nodemon",
+		"start": "node build/index.js"
+	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.3",
 		"@types/node": "^20.4.5",
 		"nodemon": "^3.0.1",
+		"test": "^3.3.0",
+		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.6"
 	},
