--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"license": "ISC",
 	"scripts": {
-		"test": "jest",
+		"test": "jest --no-cache",
 		"build": "tsc",
 		"dev": "nodemon",
 		"start": "node build/index.js"
