--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 		"email": "oyevardaan@gmail.com"
 	},
 	"license": "ISC",
+	"engines": {
+		"node": ">=16.0.0",
+		"npm": ">=7.0.0"
+	},
 	"scripts": {
 		"test": "jest --no-cache --verbose",
 		"build": "tsc",
